# kmodel

./: CMakeLists.txt  ChangeStatus.cpp  ChangeStatus.h  ControlModel.cpp  ControlModel.h  Course.cpp  Course.h  EntityStatus.cpp  EntityStatus.h  Localization.cpp  Localization.h  Track.cpp  Track.h  Utils.cpp  Utils.h  main.cpp
test/: CMakeLists.txt  testEntityStatus.cpp
